[gd_scene load_steps=4 format=3 uid="uid://1a8guthjfrun"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_afpgt"]
[ext_resource type="PackedScene" uid="uid://cdvqba830ybuj" path="res://scenes/Card.tscn" id="2_q0ii5"]
[ext_resource type="Texture2D" uid="uid://de7jlfvaxawde" path="res://textures/cards/others/cardback.tres" id="3_23pbd"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_afpgt")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 1
color = Color(0, 0.392157, 0, 1)

[node name="Card-7-1" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(628, 1072)

[node name="Card-7-2" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(724, 1072)

[node name="Card-7-3" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(820, 1072)

[node name="Card-7-4" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(916, 1072)

[node name="Card-7-5" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(1012, 1072)

[node name="Card-7-6" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(1108, 1072)

[node name="Card-7-7" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(1204, 1072)

[node name="Card-6-1" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(676, 940)

[node name="Card-6-2" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(772, 940)

[node name="Card-6-3" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(868, 940)

[node name="Card-6-4" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(964, 940)

[node name="Card-6-5" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(1060, 940)

[node name="Card-6-6" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(1156, 940)

[node name="Card-5-1" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(724, 808)

[node name="Card-5-2" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(820, 808)

[node name="Card-5-3" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(916, 808)

[node name="Card-5-4" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(1012, 808)

[node name="Card-5-5" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(1108, 808)

[node name="Card-4-1" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(772, 676)

[node name="Card-4-2" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(868, 676)

[node name="Card-4-3" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(964, 676)

[node name="Card-4-4" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(1060, 676)

[node name="Card-3-1" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(820, 544)

[node name="Card-3-2" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(916, 544)

[node name="Card-3-3" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(1012, 544)

[node name="Card-2-1" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(868, 412)

[node name="Card-2-2" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(964, 412)

[node name="Card-1-1" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(916, 280)

[node name="Card-Top" parent="." instance=ExtResource("2_q0ii5")]
position = Vector2(968, 132)

[node name="Pile" type="Area2D" parent="."]
position = Vector2(864, 132)

[node name="Sprite2D" type="Sprite2D" parent="Pile"]
position = Vector2(44, -62)
texture = ExtResource("3_23pbd")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Pile"]
position = Vector2(44, -62)
polygon = PackedVector2Array(-44, 62, -44, -62, 44, -62, 44, 62)

[node name="Reset" type="Button" parent="."]
offset_left = 1488.0
offset_top = 30.0
offset_right = 1540.0
offset_bottom = 62.0
text = "Reset"

[node name="Score" type="RichTextLabel" parent="."]
offset_left = 384.0
offset_top = 30.0
offset_right = 430.0
offset_bottom = 80.0
bbcode_enabled = true
text = "[center]Score
0[/center]"

[node name="RemainingCardsText" type="RichTextLabel" parent="."]
offset_left = 710.0
offset_top = 30.0
offset_right = 852.0
offset_bottom = 77.0
bbcode_enabled = true
text = "[center]Remaining Cards
0[/center]"

[node name="Notes" type="TextEdit" parent="."]
offset_left = 30.0
offset_top = 156.0
offset_right = 580.0
offset_bottom = 1056.0
wrap_mode = 1
scroll_fit_content_height = true

[connection signal="input_event" from="Pile" to="." method="_on_pile_input_event"]
[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
[connection signal="mouse_entered" from="Notes" to="." method="_on_notes_mouse_entered"]
[connection signal="mouse_exited" from="Notes" to="." method="_on_notes_mouse_exited"]
[connection signal="text_changed" from="Notes" to="." method="_on_notes_text_changed"]
